# series-recom

./: .env_template  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
notebooks/: get_data_from_imdb.ipynb  get_data_from_jelly.ipynb  get_data_from_tmdb.ipynb
