[project]
name = "series-recom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cinemagoer>=2023.5.1",
    "dotenv>=0.9.9",
    "imdbinfo>=0.6.2",
    "jellyfin-apiclient-python>=1.11.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
]
